# felits

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: 01_preprocessing.py  02_feature_extraction.py  03_feature_selection.py  04_deep_learning_models.py  05_xai_explainability.py  06_full_pipeline.py  README.md
felits/: __init__.py  _compat.py  data.py  optimization.py  xai.py
felits/feature_extraction/: __init__.py  automated.py  spectral.py  temporal.py
felits/feature_selection/: __init__.py  causal.py  ensemble.py  information.py  pipeline.py  regularization.py  xai.py
felits/models/: __init__.py  base.py  dl.py  sklearn.py
felits/preprocessing/: __init__.py  decomposition.py  imputation.py  metrics.py  outliers.py  scaling.py
notebooks/: 01_preprocessing.ipynb  02_feature_extraction.ipynb  03_feature_selection.ipynb  04_deep_learning_models.ipynb  05_xai_explainability.ipynb  06_full_pipeline.ipynb
tests/: conftest.py
tests/data/: test_loaders.py
tests/feature_extraction/: test_automated.py  test_spectral.py  test_temporal.py
tests/feature_selection/: test_causal.py  test_ensemble.py  test_information.py  test_pipeline.py  test_regularization.py  test_xai.py
tests/models/: test_sklearn_wrappers.py
tests/optimization/: test_optuna_optimizer.py
tests/preprocessing/: test_day_aligned.py  test_decomposition.py  test_imputation.py  test_metrics.py  test_outliers.py  test_scaling.py
tests/training/: test_train_val_test_contract.py
tests/xai/: test_deep_shap.py
